# TopSurfaceGrasping

./: .gitignore  ReadMe.md  top_surface_grasping.launch.py  top_surface_grasping.rviz  top_surface_grasping.world
submission/: submission.tex
top_surface_enviornment/: CMakeLists.txt  package.xml
top_surface_enviornment/launch/: simulation.launch.py
top_surface_enviornment/urdf/: camera.urdf
top_surface_enviornment/worlds/: top_surface_grasping.world
top_surface_geometry/: package.xml  setup.cfg  setup.py
top_surface_geometry/config/: test_geometry_extraction.rviz
top_surface_geometry/launch/: test_geometry_extraction.launch.py
top_surface_geometry/top_surface_geometry/: cube_cloud_publisher.py  geometry_extraction_node.py  test_client.py
top_surface_interfaces/: CMakeLists.txt  package.xml
top_surface_interfaces/srv/: DetectObjects.srv  ExtractObjectGeometry.srv  SegmentObjects.srv
top_surface_manager/: package.xml  setup.cfg  setup.py
top_surface_manager/top_surface_manager/: all_possible_grasps.py  grasp_pipeline_manager.py  grasp_proto.py
top_surface_object_detector/: package.xml  setup.cfg  setup.py
top_surface_object_detector/top_surface_object_detector/: object_detector_node.py
top_surface_segmentation/: package.xml  setup.cfg  setup.py
top_surface_segmentation/top_surface_segmentation/: segmentation_node.py
